# Stock-Predictor-via-Neural-Network

./: .gitignore  CLAUDE.md  README.md  config.py  pyproject.toml  requirements.txt
config/: config.yaml
notebooks/: data.ipynb  view.ipynb
src/: data.ipynb  data.py
src/features/: approach.md  target.py  technical.py
src/stocknn/: __init__.py  config.py
src/stocknn/data_pipeline/: __init__.py  clean.py  ingest.py
